# schema-registry

./: .gitattributes  BENCHMARK_IMPLEMENTATION_REPORT.md  Cargo.toml  PHASE_2B_COMPLETION_REPORT.md  PHASE_2B_INTEGRATION.md  package-lock.json
.github/workflows/: publish-crates.yml  publish-npm.yml
benchmarks/: QUICK_REFERENCE.md  README.md
benchmarks/output/: .gitignore  summary.md
benchmarks/output/raw/: .gitkeep
crates/benchmarks/: Cargo.toml  README.md
crates/benchmarks/src/: io.rs  lib.rs  markdown.rs
crates/benchmarks/src/adapters/: compatibility.rs  mod.rs  storage.rs  validation.rs
crates/llm-integrations/: Cargo.toml
crates/llm-schema-api/: build.rs
crates/schema-registry-cli/: Cargo.toml
crates/schema-registry-cli/src/: main.rs
crates/schema-registry-cli/src/commands/: benchmark.rs  mod.rs
crates/schema-registry-core/: Cargo.toml
crates/schema-registry-core/src/: config_manager_adapter.rs  config_refresh.rs  lib.rs  startup.rs
crates/schema-registry-server/src/: main.rs
crates/schema-registry-validation/src/: config_integration.rs  lib.rs
sdks/typescript/: package-lock.json  package.json
sdks/typescript/src/: client.ts
